[package]
name = "nico-nvlink-manager"
version = "0.0.1"
edition.workspace = true
description = "NICo NVLink Manager"
license.workspace = true
authors.workspace = true

[lib]
name = "nico_nvlink_manager"

[features]
default = []
test-support = []

[dependencies]
nico-api-db = { path = "../api-db" }
nico-api-model = { path = "../api-model" }
nico-secrets = { path = "../secrets" }
nico-utils = { path = "../utils" }
nico-uuid = { path = "../uuid" }
config-version = { path = "../config-version" }
libnmxc = { path = "../libnmxc" }
libnmxm = { path = "../libnmxm" }

# these are alphabetized
async-trait = { workspace = true }
chrono = { workspace = true }
duration-str = { workspace = true }
eyre = { workspace = true }
http = { workspace = true }
opentelemetry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
rand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { features = ["v4", "serde"], workspace = true }

[lints]
workspace = true
