[package]
name = "nico-preingestion-manager"
version = "0.0.1"
edition.workspace = true
description = "NICo Pre-ingestion Manager"
license.workspace = true
authors.workspace = true

[lib]
name = "nico_preingestion_manager"

[dependencies]
bmc-vendor = { path = "../bmc-vendor" }
nico-api-db = { path = "../api-db" }
nico-api-model = { path = "../api-model" }
nico-firmware = { path = "../firmware" }
nico-redfish = { path = "../redfish" }
nico-secrets = { path = "../secrets" }
nico-ssh = { path = "../ssh" }
nico-utils = { path = "../utils" }

# these are alphabetized
chrono = { workspace = true }
futures-util = { workspace = true }
libredfish = { workspace = true }
opentelemetry = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
version-compare = { workspace = true }

[dev-dependencies]
prometheus-text-parser = { path = "../prometheus-text-parser" }

[lints]
workspace = true
