[package]
name = "nico-redfish"
version = "0.0.1"
edition.workspace = true
description = "NICo Redfish"
license.workspace = true
authors.workspace = true

[lib]
name = "nico_redfish"

[features]
default = []
test-support = [ "dep:chrono", "dep:serde_json", "dep:tokio" ]

[dependencies]
bmc-vendor = { path = "../bmc-vendor" }
nico-api-db = { path = "../api-db", default-features = false }
nico-api-model = { path = "../api-model", default-features = false }
nico-secrets = { path = "../secrets" }
nico-utils = { path = "../utils", default-features = false }
# state-controller is required only to convert redfish errors to
# controller external errors. We can make it more tight if move
# StateHandlerError to separate crate.
state-controller = { path = "../state-controller", default-features = false }

#these are alphabetized
arc-swap = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, optional = true }
http = { workspace = true }
libredfish = { workspace = true }
mac_address = { workspace = true }
nv-redfish = { workspace = true, features = ["bmc-http", "oem-hpe"] }
reqwest = { workspace = true, default-features = false }
serde_json = { workspace = true, optional = true }
sqlx = { workspace = true, features = [ "postgres" ] }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
url = { workspace = true }
