#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "nico-rvs"
version = "0.0.1"
description = "Rack Validation Service -- external validation orchestrator for NICC"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "nico-rvs"
path = "src/main.rs"

[dependencies]
nico-uuid = { path = "../uuid" }
nico-rpc = { path = "../rpc" }
nico-tls = { path = "../tls" }
figment = { workspace = true, features = ["toml", "env"] }
uuid = { workspace = true, features = ["v4"] }
logfmt = { path = "../logfmt" }
serde = { features = ["derive"], workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
