[package]
name = "nico-site-explorer"
version = "0.0.1"
edition.workspace = true
description = "NICo Site Explorer"
license.workspace = true
authors.workspace = true

[lib]
name = "nico_site_explorer"

[features]
default = []

[dependencies]
bmc-explorer = { path = "../bmc-explorer" }
nico-api-db = { path = "../api-db", default-features = false }
nico-api-model = { path = "../api-model", default-features = false }
nico-firmware = { path = "../firmware" }
nico-health-report = { path = "../health-report" }
nico-ipmi = { path = "../ipmi" }
nico-network = { path = "../network" }
nico-redfish = { path = "../redfish" }
nico-secrets = { path = "../secrets" }
nico-utils = { path = "../utils" }
nico-uuid = { path = "../uuid" }
config-version = { path = "../config-version" }

# these are alphabetized
arc-swap = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
duration-str = { workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
http = { workspace = true }
libredfish = { workspace = true }
librms = { workspace = true }
mac_address = { workspace = true }
opentelemetry = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [ "postgres" ] }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
version-compare = { workspace = true }

[dev-dependencies]
nico-redfish = { path = "../redfish", features = ["test-support"] }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
