#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "nico-ssh-console-fuzz"
version = "0.0.1"
edition.workspace = true
description = "NICo is a Bare Metal Provisioning system with auto-discovery and API based machine manipulation"
license.workspace = true
authors.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { workspace = true }
nico-ssh-console = { path = "../ssh-console" }

[[bin]]
name = "ssh_console_escape_filter"
path = "fuzz_targets/ssh_console_escape_filter.rs"
test = false
doc = false
bench = false
